--- a/data/build.gradle
+++ b/data/build.gradle
@@ -15,4 +15,5 @@ dependencies {
   compile('org.springframework.boot:spring-boot-starter-web')
   compile('org.springframework.boot:spring-boot-starter-security')
   compile('org.projectlombok:lombok')
+    runtime('mysql:mysql-connector-java')
 }
